--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "^51.0.0",
-    "expo-status-bar": "~1.6.0",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.12.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
